webworker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webworker-depl
  labels:
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webworker
  template:
    metadata:
      labels:
        app: webworker
    spec:
      containers:
        - name: time-updater
          image: busybox:1.32
          command: 
            - "/bin/sh"
          args:
            - "-c"
            - "/tmp/updater.sh"
          volumeMounts:
            - name: updater-script-vol
              mountPath: /tmp
            - name: target-vol
              mountPath: /target
        - name: web-server
          image: nginx:1.19
          volumeMounts:
            - name: target-vol
              mountPath: /usr/share/nginx/html
      volumes:
        - name: target-vol
          emptyDir: {}
        - name: init-script-vol
          configMap:
            defaultMode: 0700
            name: webworker-cm
            items:
              - key: init-script 
                path: init.sh          
        - name: updater-script-vol
          configMap:
            defaultMode: 0700
            name: webworker-cm
            items:
              - key: updater-script 
                path: updater.sh
