webworker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-worker-svc
spec:
  type: LoadBalancer
  selector:
    app: webworker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
